Use Long#valueOf instead of constructor
- The constructor is deprecated since Java 9.